--- a/returns.ipynb
+++ b/returns.ipynb
@@ -77,7 +77,7 @@
     "                        \"description\": \"objection that the user specifies\"\n",
     "                    },\n",
     "                },\n",
-    "                \"required\": [\"interests\"]\n",
+    "                \"required\": [\"objections\"]\n",
     "            }\n",
     "        }\n",
     "    }],\n",
