start on website demo

--- a/notebooks/foundercoach.ipynb
+++ b/notebooks/foundercoach.ipynb
@@ -296,7 +296,7 @@
     }
    ],
    "source": [
-    "print(agent[\"phone_number\"])"
+    "print(agent[\"phone_number\"])e"
    ],
    "metadata": {
     "collapsed": false,
