--- a/notebooks/dashlar.ipynb
+++ b/notebooks/dashlar.ipynb
@@ -2,13 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: flyflowclient in /opt/homebrew/lib/python3.11/site-packages (1.14.14)\r\n",
+      "Requirement already satisfied: requests>=2.25.1 in /opt/homebrew/lib/python3.11/site-packages (from flyflowclient) (2.31.0)\r\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/homebrew/lib/python3.11/site-packages (from requests>=2.25.1->flyflowclient) (3.3.2)\r\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/homebrew/lib/python3.11/site-packages (from requests>=2.25.1->flyflowclient) (3.7)\r\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/homebrew/lib/python3.11/site-packages (from requests>=2.25.1->flyflowclient) (2.2.1)\r\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/homebrew/lib/python3.11/site-packages (from requests>=2.25.1->flyflowclient) (2024.2.2)\r\n",
+      "\r\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m23.3.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m24.0\u001B[0m\r\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpython3.11 -m pip install --upgrade pip\u001B[0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install --upgrade flyflowclient"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-28T21:25:36.707270Z",
+     "start_time": "2024-05-28T21:25:31.287286Z"
+    }
+   },
+   "id": "eb6ae72a24817832"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-20T21:20:17.111910Z",
-     "start_time": "2024-05-20T21:20:17.010552Z"
+     "end_time": "2024-05-28T21:25:40.452370Z",
+     "start_time": "2024-05-28T21:25:40.320114Z"
     }
    },
    "outputs": [],
@@ -49,6 +81,15 @@
     "6. **Closing and Thank you for reaching out**:\n",
     "   - End the call very politely and be grateful for the opportunity to help. Let them know you will pass along the info immediately after you hang up. Encourage them to call back with any other future job requests and let them know they will hear from your boss very soon.\n",
     "   - When you are done, feel free to hang up the call.\n",
+    "   \n",
+    "Style Guide \n",
+    "- Be consice and to the point\n",
+    "- For short thoughts, respond in one sentence or less\n",
+    "- Only include one idea at a time in your response  \n",
+    "- *Do not include* lists of numbers or asterisks in your response * \n",
+    "\n",
+    "Functions you can call \n",
+    "- hangup - hang up the phone, *only* to be used when both the user and assistant have stopped talking. Never return text that says \"call hangup function\", just call the function through function calling \n",
     "\"\"\"\n",
     "\n",
     "initial_message = \"\"\"\n",
@@ -58,33 +99,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-20T21:20:59.591456Z",
-     "start_time": "2024-05-20T21:20:59.576635Z"
+     "end_time": "2024-05-28T21:25:43.974982Z",
+     "start_time": "2024-05-28T21:25:43.956127Z"
     }
    },
    "id": "76c7d78bce238f64"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [],
    "source": [
-    "agent = client.create_agent(\n",
-    "    name='Dashlar Agent',\n",
-    "    system_prompt=system_prompt,\n",
-    "    initial_message=initial_message,\n",
-    "    llm_model='gpt-4o',\n",
-    "    voice_id='male-middle-aged-american-casual',\n",
-    "    filler_words=True,\n",
-    "    filler_words_whitelist=[\"Yeah.\", \"Hmm.\", \"Sure.\", \"Let me see.\", \"Alright.\", \"Well.\", \"\"],\n",
-    "    area_code='415'\n",
-    ")"
+    "# agent = client.create_agent(\n",
+    "#     name='Dashlar Agent',\n",
+    "#     system_prompt=system_prompt,\n",
+    "#     initial_message=initial_message,\n",
+    "#     llm_model='gpt-4o',\n",
+    "#     voice_id='male-middle-aged-american-casual',\n",
+    "#     filler_words=True,\n",
+    "#     filler_words_whitelist=[\"Yeah.\", \"Hmm.\", \"Sure.\", \"Let me see.\", \"Alright.\", \"Well.\", \"\"],\n",
+    "#     area_code='415'\n",
+    "# )"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-20T21:21:36.913560Z",
-     "start_time": "2024-05-20T21:21:34.442039Z"
+     "end_time": "2024-05-20T21:53:14.807519Z",
+     "start_time": "2024-05-20T21:53:12.846478Z"
     }
    },
    "id": "5261312cb8ed170"
@@ -139,11 +180,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'id': 255,\n 'created_at': '2024-05-21T16:01:12.402728506Z',\n 'updated_at': '2024-05-21T16:01:12.402728506Z',\n 'deleted_at': None,\n 'agent_id': 54,\n 'time_seconds': 0,\n 'average_latency_ms': 0,\n 'transcript': None,\n 'context': '',\n 'twilio_sid': 'CA298b683c500d459329dc45f40611198a',\n 'client_number': '',\n 'started_at': '2024-05-21T16:01:12.401469404Z',\n 'ended_at': '0001-01-01T00:00:00Z',\n 'disconnect_reason': ''}"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-21T16:01:12.296349Z",
+     "start_time": "2024-05-21T16:01:10.974614Z"
+    }
+   },
+   "id": "647962143ca3b47c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "agent = client.update_agent(\n",
+    "    agent_id=54,\n",
+    "    name='Dashlar Agent',\n",
+    "    system_prompt=system_prompt,\n",
+    "    initial_message=initial_message,\n",
+    "    llm_model='flyflow-voice',\n",
+    "    voice_id='male-middle-aged-american-casual',\n",
+    "    filler_words=False,\n",
+    "    chunking=False,\n",
+    "    actions=[\n",
+    "        {\n",
+    "            \"name\": \"hangup\",\n",
+    "            \"instructions\": \"hangup the phone when both the user and the assistant have said goodbye and the call is at a logical stopping point. Make sure the assistant has had time to say goodbye before hanging up.\"\n",
+    "        }\n",
+    "    ],\n",
+    "    webhook=\"https://f078-108-27-77-118.ngrok-free.app/webhook\",\n",
+    "    endpointing=100,\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-28T21:34:24.576621Z",
+     "start_time": "2024-05-28T21:34:24.361286Z"
+    }
+   },
+   "id": "8d39676a0bb86f77"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+12097212037\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(agent[\"phone_number\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-28T21:34:44.725150Z",
+     "start_time": "2024-05-28T21:34:44.718904Z"
+    }
+   },
+   "id": "79c01789d4c9c0ac"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'id': 191,\n 'created_at': '2024-05-20T21:22:21.277946279Z',\n 'updated_at': '2024-05-20T21:22:21.277946279Z',\n 'deleted_at': None,\n 'agent_id': 54,\n 'time_seconds': 0,\n 'average_latency_ms': 0,\n 'transcript': None,\n 'context': '',\n 'twilio_sid': 'CAe9f57de77d766ab25515560faef89fc6',\n 'client_number': '',\n 'started_at': '2024-05-20T21:22:21.27628654Z',\n 'ended_at': '0001-01-01T00:00:00Z',\n 'disconnect_reason': ''}"
+      "text/plain": "{'id': 694,\n 'created_at': '2024-05-28T21:34:51.688009558Z',\n 'updated_at': '2024-05-28T21:34:51.688009558Z',\n 'deleted_at': None,\n 'agent_id': 54,\n 'time_seconds': 0,\n 'average_latency_ms': 0,\n 'transcript': None,\n 'context': '',\n 'twilio_sid': 'CA8a38d42aca1e4b94d0e0f5b230330ecb',\n 'client_number': '',\n 'started_at': '2024-05-28T21:34:51.686765485Z',\n 'ended_at': '0001-01-01T00:00:00Z',\n 'disconnect_reason': ''}"
      },
      "execution_count": 6,
      "metadata": {},
@@ -159,11 +280,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-20T21:22:21.316749Z",
-     "start_time": "2024-05-20T21:22:20.826333Z"
+     "end_time": "2024-05-28T21:34:51.767835Z",
+     "start_time": "2024-05-28T21:34:51.251658Z"
     }
    },
-   "id": "647962143ca3b47c"
+   "id": "69d926442c4ec983"
   },
   {
    "cell_type": "code",
@@ -173,7 +294,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "8d39676a0bb86f77"
+   "id": "9a8f34d867d95de1"
   }
  ],
  "metadata": {
